fix(ui): comment out dialog removal in alert function and add frame alignment attributes to h-stack and v-stack components for improved layout control

--- a/packages/ui/scss/utils/_stacks.scss
+++ b/packages/ui/scss/utils/_stacks.scss
@@ -192,6 +192,9 @@ $v-placement-map: (
       }
     }
 
+    :where(&[frame\:alignment='leading']) {
+      justify-self: start;
+    }
     :where(&[frame\:alignment='center']) {
       justify-self: center;
     }
